--- a/plutus-core-assembler.cabal
+++ b/plutus-core-assembler.cabal
@@ -9,6 +9,7 @@ maintainer:    ryanmatovu@gmail.com
 
 library
     exposed-modules:
+      PlutusCore.Assembler.Prelude
       PlutusCore.Assembler.Types.Token
     build-depends:
       base >= 4.9 && < 5,
