passing single-token test

--- a/plutus-core-assembler.cabal
+++ b/plutus-core-assembler.cabal
@@ -23,9 +23,11 @@ library
     bytestring,
     containers,
     either,
+    extra,
     generic-lens,
     ghc-prim,
     hedgehog -any,
+    hex-text,
     lens,
     text -any,
     mtl,
