--- a/plutus-core-assembler.cabal
+++ b/plutus-core-assembler.cabal
@@ -9,11 +9,13 @@ maintainer:    ryanmatovu@gmail.com
 
 library
   exposed-modules:
+    PlutusCore.Assembler.Parse
     PlutusCore.Assembler.Prelude
     PlutusCore.Assembler.Tokenize
     PlutusCore.Assembler.Types.AST
     PlutusCore.Assembler.Types.Builtin
     PlutusCore.Assembler.Types.Constant
+    PlutusCore.Assembler.Types.ErrorMessage
     PlutusCore.Assembler.Types.InfixBuiltin
     PlutusCore.Assembler.Types.Token
   build-depends:
@@ -31,6 +33,7 @@ library
     lens,
     text -any,
     mtl,
+    parsec,
     playground-common,
     plutus-pab,
     plutus-core,
