--- a/plutus-core-assembler.cabal
+++ b/plutus-core-assembler.cabal
@@ -63,6 +63,7 @@ test-suite spec
 
   other-modules:
     PlutusCore.Assembler.Spec.Prelude
+    PlutusCore.Assembler.Spec.ParseSpec
     PlutusCore.Assembler.Spec.TokenizeSpec
 
   build-depends:
