--- a/plutus-core-assembler.cabal
+++ b/plutus-core-assembler.cabal
@@ -62,6 +62,7 @@ test-suite spec
   main-is: Spec.hs
 
   other-modules:
+    PlutusCore.Assembler.Spec.Gen
     PlutusCore.Assembler.Spec.Prelude
     PlutusCore.Assembler.Spec.ParseSpec
     PlutusCore.Assembler.Spec.TokenizeSpec
