--- a/pluto.cabal
+++ b/pluto.cabal
@@ -64,6 +64,7 @@ test-suite spec
   main-is: Spec.hs
 
   other-modules:
+    PlutusCore.Assembler.Spec.AnnDeBruijnSpec
     PlutusCore.Assembler.Spec.Gen
     PlutusCore.Assembler.Spec.Prelude
     PlutusCore.Assembler.Spec.ParseSpec
