--- a/pluto.cabal
+++ b/pluto.cabal
@@ -11,6 +11,7 @@ library
   exposed-modules:
     PlutusCore.Assembler.AnnDeBruijn
     PlutusCore.Assembler.ConstantToTokens
+    PlutusCore.Assembler.Desugar
     PlutusCore.Assembler.Parse
     PlutusCore.Assembler.Prelude
     PlutusCore.Assembler.Tokenize
