--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-        "nixEnvSelector.nixFile": "${workspaceRoot}/shell.nix"
+        "nixEnvSelector.nixFile": "${workspaceRoot}/shell.nix",
+        "haskell.formattingProvider": "stylish-haskell",
+        "editor.defaultFormatter": "haskell.haskell"
 }
