update maintainer field

--- a/pluto.cabal
+++ b/pluto.cabal
@@ -4,7 +4,7 @@ version:            0.1.0.0
 license: NONE
 license-files: LICENSE
 author:        Ardana Labs
-maintainer:    ryanmatovu@gmail.com
+maintainer:    morgan.thomas@platonic.systems
 
 
 library
