Rough version of evaluating a bound function

--- a/pluto.cabal
+++ b/pluto.cabal
@@ -18,6 +18,7 @@ library
     PlutusCore.Assembler.Parse
     PlutusCore.Assembler.Prelude
     PlutusCore.Assembler.Tokenize
+    PlutusCore.Assembler.Transform
     PlutusCore.Assembler.Types.AST
     PlutusCore.Assembler.Types.Builtin
     PlutusCore.Assembler.Types.Constant
