Fix tests, and add cabal-test to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,4 @@ jobs:
     - run: nix-build
     - run: nix flake check
     - run: nix-shell --command 'cabal run pluto -- run examples/hello.pluto'
+    - run: nix-shell --command 'cabal test'
