--- a/pluto.cabal
+++ b/pluto.cabal
@@ -10,6 +10,7 @@ maintainer:    morgan.thomas@platonic.systems
 library
   exposed-modules:
     PlutusCore.Assembler.AnnDeBruijn
+    PlutusCore.Assembler.App
     PlutusCore.Assembler.Assemble
     PlutusCore.Assembler.ConstantToTokens
     PlutusCore.Assembler.Desugar
@@ -18,7 +19,7 @@ library
     PlutusCore.Assembler.Parse
     PlutusCore.Assembler.Prelude
     PlutusCore.Assembler.Tokenize
-    PlutusCore.Assembler.Transform
+    PlutusCore.Assembler.Build
     PlutusCore.Assembler.Types.AST
     PlutusCore.Assembler.Types.Builtin
     PlutusCore.Assembler.Types.Constant
@@ -117,6 +118,7 @@ test-suite spec
 
   other-modules:
     PlutusCore.Assembler.Spec.AnnDeBruijnSpec
+    PlutusCore.Assembler.Spec.ExamplesSpec
     PlutusCore.Assembler.Spec.Gen
     PlutusCore.Assembler.Spec.Prelude
     PlutusCore.Assembler.Spec.ParseSpec
@@ -129,7 +131,9 @@ test-suite spec
     bytestring,
     containers,
     either,
+    exceptions,
     extra,
+    filepath,
     generic-lens,
     ghc-prim,
     hedgehog -any,
