--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,4 @@ jobs:
     - run: nix flake check
     - run: nix-shell --command 'cabal run pluto -- run examples/hello.pluto'
     - run: nix-shell --command 'cabal test'
+    - run: nix-shell --command haskell-language-server
