use github hosted runner

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     name: nix-build
+    runs-on: ubuntu-latest
     steps:
 
     - name: Checkout repository to $GITHUB_WORKSPACE
