--- a/pluto.cabal
+++ b/pluto.cabal
@@ -168,3 +168,28 @@ test-suite spec
           -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
           -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
           -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-ignore-interface-pragmas -fno-specialise
+
+
+executable pluto-sample-contract
+    main-is:          Main.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    
+        base ^>=4.14.3.0,
+        pluto,
+        plutus-contract,
+        plutus-ledger,
+        plutus-ledger-api,
+        plutus-tx,
+        plutus-tx-plugin,
+        text,
+        containers,
+        data-default,
+        freer-extras
+
+    hs-source-dirs:   examples/contracts/sample
+    default-language: Haskell2010
