Sample contract: Utilize ScriptContext in Pluto
And change the smart contract to check the beneficiary.

--- a/pluto.cabal
+++ b/pluto.cabal
@@ -6,6 +6,10 @@ license-files: LICENSE
 author:        Ardana Labs
 maintainer:    morgan.thomas@platonic.systems
 
+data-files:
+  examples/**/*.pluto
+extra-source-files:
+  examples/contract/sample/validator.pluto
 
 library
   exposed-modules:
