--- a/pluto.cabal
+++ b/pluto.cabal
@@ -60,7 +60,8 @@ library
     tasty-hedgehog -any,
     cardano-api -any,
     serialise -any,
-    cardano-ledger-alonzo -any
+    cardano-ledger-alonzo -any,
+    shrinker
 
   hs-source-dirs: src
   default-language: Haskell2010
